--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -7,10 +7,10 @@
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
 <div>
-    <h2 th:text="#{web.admin.requirement.list.header}"/>
-    <table class="table table-striped table-bordered table-hover">
+    <table class="table table-striped table-bordered table-hover align-middle text-center">
         <thead class="thead-light">
         <tr>
+            <th scope="col" th:text="#{web.media-list.table.id}"/>
             <th scope="col" th:text="#{web.media-list.table.user}"/>
             <th scope="col" th:text="#{web.media-list.table.type}"/>
             <th scope="col" th:text="#{web.media-list.table.name}"/>
@@ -18,28 +18,33 @@
             <th scope="col" th:text="#{web.media-list.table.count}"/>
             <th scope="col" th:text="#{web.media-list.table.availability}"/>
             <th scope="col">Overseerr</th>
-            <th scope="col" th:text="#{web.media-list.table.id}"/>
         </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
         <tr th:each="requirement : ${requirements}" th:class="${requirement.getMedia().getAvailability().isAvailable() ? 'table-success' : 'media-not-available'}">
+            <td th:text="${requirement.getMedia().getId()}"></td>
             <td th:text="${requirement.getGroup().getName()}"></td>
             <td>
-                <img class="icon align-middle" th:alt="${requirement.getMedia().getType()}" th:src="@{/static/__${requirement.getMedia().getType().getIcon()}__}"/>
-                <th:block th:text="#{${requirement.getMedia().getType().getLocalizationKey()}}"></th:block>
+                <div class="d-flex flex-row justify-content-center align-items-center col-auto">
+                    <svg class="m-1" height="20" width="20">
+                        <image th:xlink:href="@{/static/__${requirement.getMedia().getType().getIcon()}__}" height="20" width="20"/>
+                    </svg>
+                    <span class="m-1" th:text="#{${requirement.getMedia().getType().getLocalizationKey()}}"></span>
+                </div>
             </td>
             <td th:text="${requirement.getMedia().getName()}"></td>
             <td th:text="${requirement.getMedia().getIndex()}"></td>
             <td th:text="${requirement.getMedia().getPartsCount()}"></td>
             <td th:text="#{${requirement.getMedia().getAvailability().getLocalizationKey()}}"></td>
             <td>
-                <th:block th:if="${requirement.getMedia().getOverseerrId()}">
+                <div th:if="${requirement.getMedia().getOverseerrId()}" class="d-flex flex-row justify-content-center align-items-center col-auto">
                     <a th:href="${userService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
-                        <img class="icon" alt="Overseerr logo" th:src="@{/static/overseerr.png}"/>
+                        <svg class="m-1" height="20" width="20">
+                            <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
+                        </svg>
                     </a>
-                </th:block>
+                </div>
             </td>
-            <td th:text="${requirement.getMedia().getId()}"></td>
         </tr>
         </tbody>
     </table>
