--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -49,17 +49,17 @@
                 </div>
             </td>
             <td>
-                <div class="d-flex flex-row p-2 bd-highlight justify-content-center align-items-center">
+                <div class="d-flex flex-row justify-content-center align-items-center">
                     <div class="m-1" th:if="${media.getAvailability().isAvailable()}">
                         <form th:action="@{/api/user/media-requirement/complete}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${media.getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success"/>
+                            <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm"/>
                         </form>
                     </div>
                     <div class="m-1" th:if="${media.getAvailability().isAvailable()}">
                         <form th:action="@{/api/user/media-requirement/abandon}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${media.getId()}"/>
-                            <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger"/>
+                            <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm"/>
                         </form>
                     </div>
                 </div>
