--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -48,7 +48,7 @@
             </td>
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
-                    <div class="m-1" th:if="${requirement.getMedia().getAvailability().isAvailable()}">
+                    <div class="m-1" th:if="${requirement.getMedia().getAvailability().isAvailable() && requirement.getMedia().isCompletable()}">
                         <form th:action="@{/api/admin/media-requirement/complete}" method="post">
                             <input type="hidden" name="mediaId" class="form-control" th:value="${requirement.getMedia().getId()}"/>
                             <input type="hidden" name="groupId" class="form-control" th:value="${requirement.getGroup().getId()}"/>
