--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -38,12 +38,28 @@
             <td th:text="${requirement.getMedia().getAvailablePartsCount() + ' / ' + requirement.getMedia().getPartsCount()}"></td>
             <td th:text="#{${requirement.getMedia().getAvailability().getLocalizationKey()}}"></td>
             <td>
-                <div th:if="${requirement.getMedia().getOverseerrId()}" class="d-flex flex-row justify-content-center align-items-center col-auto">
-                    <a th:href="${userService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
-                        <svg class="m-1" height="20" width="20">
-                            <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
-                        </svg>
-                    </a>
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <div th:if="${requirement.getMedia().getOverseerrId()}" class="m-1">
+                        <a th:href="${userService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
+                        <a title="Sonarr" th:href="${userService.getSonarrUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{/static/sonarr.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div th:if="${requirement.getMedia().getRadarrSlug()}" class="m-1">
+                        <a title="Radarr" th:href="${userService.getRadarrUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{/static/radarr.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </td>
             <td>
