--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -18,7 +18,7 @@
             <th scope="col" th:text="#{web.media-list.table.season}"/>
             <th scope="col" th:text="#{web.media-list.table.episodes}"/>
             <th scope="col" th:text="#{web.media-list.table.availability}"/>
-            <th scope="col">Overseerr</th>
+            <th scope="col" th:text="#{web.media-list.table.links}"/>
             <th scope="col" th:text="#{web.media-list.table.action}"/>
         </tr>
         </thead>
@@ -40,12 +40,30 @@
             <td th:text="${media.getAvailablePartsCount() + ' / ' + media.getPartsCount()}"></td>
             <td th:text="#{${media.getAvailability().getLocalizationKey()}}"></td>
             <td>
-                <div th:if="${media.getOverseerrId()}" class="d-flex flex-row justify-content-center align-items-center col-auto">
-                    <a th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
-                        <svg class="m-1" height="20" width="20">
-                            <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
-                        </svg>
-                    </a>
+                <div class="d-flex flex-row justify-content-center align-items-center">
+                    <div th:if="${media.getOverseerrId()}" class="m-1">
+                        <a title="Overseerr" th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <th:block sec:authorize="hasRole('ROLE_ADMIN')">
+                        <div th:if="${media.getSonarrSlug()}" class="m-1">
+                            <a title="Sonarr" th:href="${userService.getMediaSonarrUrl(media)}" th:target="_blank">
+                                <svg class="m-1" height="20" width="20">
+                                    <image th:xlink:href="@{/static/sonarr.svg}" height="20" width="20"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <div th:if="${media.getRadarrSlug()}" class="m-1">
+                            <a title="Radarr" th:href="${userService.getMediaRadarrUrl(media)}" th:target="_blank">
+                                <svg class="m-1" height="20" width="20">
+                                    <image th:xlink:href="@{/static/radarr.svg}" height="20" width="20"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </th:block>
                 </div>
             </td>
             <td>
