--- a/src/main/resources/templates/admin/media-requirement/add.html
+++ b/src/main/resources/templates/admin/media-requirement/add.html
@@ -21,7 +21,13 @@
             </p>
             <p>
                 <label for="overseerr" th:text="#{web.admin.requirement.add.overseerr}"/>
-                <input id="overseerr" type="text" inputmode="numeric" pattern="[0-9]*" name="overseerr" class="form-control" placeholder="123456" required autofocus/>
+                <input id="overseerr" type="text" inputmode="numeric" pattern="[0-9]*" list="media-overseerr-ids" name="overseerr" class="form-control" placeholder="123456" required autofocus/>
+                <datalist id="media-overseerr-ids">
+                    <option th:each="media : ${medias}"
+                            th:value="${media.getId()}"
+                            th:text="${media.getName()} + ' - ' + ${media.getIndex()}">
+                    </option>
+                </datalist>
             </p>
             <p>
                 <label for="season" th:text="#{web.admin.requirement.add.season}"/>
