--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -2,14 +2,14 @@
     <nav class="navbar navbar-expand bg-body-tertiary border-bottom border-body">
         <div class="container-fluid">
             <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}" th:text="#{web.navbar.media-list}"></a>
+                <a class="nav-link" th:href="@{~/}" th:text="#{web.navbar.media-list}"></a>
                 <th:block sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/admin/media/soon-deleted}" th:text="#{web.navbar.admin.media.list-soon-deleted}"></a>
-                    <a class="nav-link" th:href="@{/admin/media/delete}" th:text="#{web.navbar.admin.media.delete}"></a>
-                    <a class="nav-link" th:href="@{/admin/media-requirement/add}" th:text="#{web.navbar.admin.requirement.add}"></a>
-                    <a class="nav-link" th:href="@{/admin/media-requirement/list}" th:text="#{web.navbar.admin.requirement.list}"></a>
+                    <a class="nav-link" th:href="@{~/admin/media/soon-deleted}" th:text="#{web.navbar.admin.media.list-soon-deleted}"></a>
+                    <a class="nav-link" th:href="@{~/admin/media/delete}" th:text="#{web.navbar.admin.media.delete}"></a>
+                    <a class="nav-link" th:href="@{~/admin/media-requirement/add}" th:text="#{web.navbar.admin.requirement.add}"></a>
+                    <a class="nav-link" th:href="@{~/admin/media-requirement/list}" th:text="#{web.navbar.admin.requirement.list}"></a>
                 </th:block>
-                <a class="nav-link" th:href="@{/logout}" th:text="#{web.navbar.logout}"></a>
+                <a class="nav-link" th:href="@{~/logout}" th:text="#{web.navbar.logout}"></a>
             </div>
         </div>
     </nav>
