--- a/src/main/resources/templates/admin/media/soon-deleted.html
+++ b/src/main/resources/templates/admin/media/soon-deleted.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title th:text="#{web.navbar.admin.media.list-soon-deleted}"></title>
-    <script th:replace="~{fragment/common-head::common-head}"></script>
+    <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
 </head>
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
@@ -25,7 +25,7 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center col-auto">
                     <svg class="m-1" height="20" width="20">
-                        <image th:xlink:href="@{/static/__${media.getType().getIcon()}__}" height="20" width="20"/>
+                        <image th:xlink:href="@{~/static/__${media.getType().getIcon()}__}" height="20" width="20"/>
                     </svg>
                     <span class="m-1" th:text="#{${media.getType().getLocalizationKey()}}"></span>
                 </div>
@@ -38,7 +38,7 @@
                 <div th:if="${media.getOverseerrId()}" class="d-flex flex-row justify-content-center align-items-center col-auto">
                     <a th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
                         <svg class="m-1" height="20" width="20">
-                            <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
+                            <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
                         </svg>
                     </a>
                 </div>
