--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title th:text="#{web.navbar.media-list}"></title>
-    <script th:replace="~{fragment/common-head::common-head}"></script>
+    <th:block th:replace="~{fragment/common-head::common-head}"></th:block>
 </head>
 <body>
 <div th:replace="~{fragment/navbar.html::navbar}"></div>
@@ -30,7 +30,7 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center col-auto">
                     <svg class="m-1" height="20" width="20">
-                        <image th:xlink:href="@{/static/__${media.getType().getIcon()}__}" height="20" width="20"/>
+                        <image th:xlink:href="@{~/static/__${media.getType().getIcon()}__}" height="20" width="20"/>
                     </svg>
                     <span class="m-1" th:text="#{${media.getType().getLocalizationKey()}}"></span>
                 </div>
@@ -44,7 +44,7 @@
                     <div th:if="${media.getOverseerrId()}" class="m-1">
                         <a title="Overseerr" th:href="${userService.getMediaOverseerrUrl(media)}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
-                                <image th:xlink:href="@{/static/overseerr.svg}" height="20" width="20"/>
+                                <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
                             </svg>
                         </a>
                     </div>
@@ -52,14 +52,14 @@
                         <div th:if="${media.getSonarrSlug()}" class="m-1">
                             <a title="Sonarr" th:href="${userService.getMediaSonarrUrl(media)}" th:target="_blank">
                                 <svg class="m-1" height="20" width="20">
-                                    <image th:xlink:href="@{/static/sonarr.svg}" height="20" width="20"/>
+                                    <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
                                 </svg>
                             </a>
                         </div>
                         <div th:if="${media.getRadarrSlug()}" class="m-1">
                             <a title="Radarr" th:href="${userService.getMediaRadarrUrl(media)}" th:target="_blank">
                                 <svg class="m-1" height="20" width="20">
-                                    <image th:xlink:href="@{/static/radarr.svg}" height="20" width="20"/>
+                                    <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
                                 </svg>
                             </a>
                         </div>
@@ -69,13 +69,13 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <div class="m-1" th:if="${media.isCompletable()}">
-                        <form th:action="@{/api/user/media-requirement/complete}" method="post">
+                        <form th:action="@{~/api/user/media-requirement/complete}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${media.getId()}"/>
                             <input type="submit" th:value="#{web.media-list.table.action.complete}" class="btn btn-success btn-sm"/>
                         </form>
                     </div>
                     <div class="m-1">
-                        <form th:action="@{/api/user/media-requirement/abandon}" method="post">
+                        <form th:action="@{~/api/user/media-requirement/abandon}" method="post">
                             <input type="hidden" name="media" class="form-control" th:value="${media.getId()}"/>
                             <input type="submit" th:value="#{web.media-list.table.action.abandon}" class="btn btn-danger btn-sm"/>
                         </form>
