--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -47,14 +47,14 @@
                         </a>
                     </div>
                     <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
-                        <a title="Sonarr" th:href="${userService.getSonarrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Sonarr" th:href="${userService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
                             </svg>
                         </a>
                     </div>
                     <div th:if="${requirement.getMedia().getRadarrSlug()}" class="m-1">
-                        <a title="Radarr" th:href="${userService.getRadarrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Radarr" th:href="${userService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
                             </svg>
