--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -23,7 +23,7 @@
         </tr>
         </thead>
         <tbody class="table-group-divider">
-        <tr th:each="requirement : ${requirements}" th:class="${requirement.getMedia().getAvailability().getTableClass()}">
+        <tr th:each="requirement : ${requirements}" th:class="${thymeleafService.getTableColorClass(requirement.getMedia())}">
             <td th:text="${requirement.getMedia().getId()}"></td>
             <td th:text="${requirement.getGroup().getName()}"></td>
             <td>
@@ -42,21 +42,21 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <div th:if="${requirement.getMedia().getOverseerrId()}" class="m-1">
-                        <a th:href="${userService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a th:href="${thymeleafService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
                             </svg>
                         </a>
                     </div>
                     <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
-                        <a title="Sonarr" th:href="${userService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
                             </svg>
                         </a>
                     </div>
                     <div th:if="${requirement.getMedia().getRadarrSlug()}" class="m-1">
-                        <a title="Radarr" th:href="${userService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Radarr" th:href="${thymeleafService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
                             </svg>
