--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -24,7 +24,7 @@
         </tr>
         </thead>
         <tbody class="table-group-divider">
-        <tr th:each="requirement : ${requirements}" th:class="${requirement.getMedia().getAvailability().getTableClass()}">
+        <tr th:each="requirement : ${requirements}" th:class="${thymeleafService.getTableColorClass(requirement.getMedia())}">
             <th:block sec:authorize="hasRole('ROLE_ADMIN')">
                 <td th:text="${requirement.getMedia().getId()}"></td>
             </th:block>
@@ -44,7 +44,7 @@
             <td>
                 <div class="d-flex flex-row justify-content-center align-items-center">
                     <div th:if="${requirement.getMedia().getOverseerrId()}" class="m-1">
-                        <a title="Overseerr" th:href="${userService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
+                        <a title="Overseerr" th:href="${thymeleafService.getMediaOverseerrUrl(requirement.getMedia())}" th:target="_blank">
                             <svg class="m-1" height="20" width="20">
                                 <image th:xlink:href="@{~/static/overseerr.svg}" height="20" width="20"/>
                             </svg>
@@ -52,14 +52,14 @@
                     </div>
                     <th:block sec:authorize="hasRole('ROLE_ADMIN')">
                         <div th:if="${requirement.getMedia().getSonarrSlug()}" class="m-1">
-                            <a title="Sonarr" th:href="${userService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
+                            <a title="Sonarr" th:href="${thymeleafService.getMediaSonarrUrl(requirement.getMedia())}" th:target="_blank">
                                 <svg class="m-1" height="20" width="20">
                                     <image th:xlink:href="@{~/static/sonarr.svg}" height="20" width="20"/>
                                 </svg>
                             </a>
                         </div>
                         <div th:if="${requirement.getMedia().getRadarrSlug()}" class="m-1">
-                            <a title="Radarr" th:href="${userService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
+                            <a title="Radarr" th:href="${thymeleafService.getMediaRadarrUrl(requirement.getMedia())}" th:target="_blank">
                                 <svg class="m-1" height="20" width="20">
                                     <image th:xlink:href="@{~/static/radarr.svg}" height="20" width="20"/>
                                 </svg>
