--- a/src/main/resources/templates/admin/media-requirement/list.html
+++ b/src/main/resources/templates/admin/media-requirement/list.html
@@ -62,6 +62,13 @@
                             </svg>
                         </a>
                     </div>
+                    <div th:if="${requirement.getMedia().getPlexId()()}" class="m-1">
+                        <a title="Radarr" th:href="${thymeleafService.getMediaPlexUrl(requirement.getMedia())}" th:target="_blank">
+                            <svg class="m-1" height="20" width="20">
+                                <image th:xlink:href="@{~/static/plex.svg}" height="20" width="20"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </td>
             <td>
