--- a/src/main/resources/templates/mail/single-media.html
+++ b/src/main/resources/templates/mail/single-media.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-    <th:block th:replace="~{fragment/mail::media(media=${media}, service=${service}, userGroup=${userGroup}, overseerrEndpoint=${overseerrEndpoint})}"></th:block>
+    <th:block th:replace="~{fragment/mail::media(media=${media}, service=${service}, userGroup=${userGroup}, thymeleafService=${thymeleafService})}"></th:block>
 </div>
 </body>
 </html>
