--- a/src/main/resources/templates/mail/watchlist.html
+++ b/src/main/resources/templates/mail/watchlist.html
@@ -10,7 +10,7 @@
         <h2 th:text="#{mail.watchlist.body.header.available}"></h2>
         <ul>
             <li th:each="availableMedia : ${availableMedias}">
-                <th:block th:replace="~{fragment/mail::media(media=${availableMedia}, service=${service}, userGroup=${userGroup}, overseerrEndpoint=${overseerrEndpoint})}"></th:block>
+                <th:block th:replace="~{fragment/mail::media(media=${availableMedia}, service=${service}, userGroup=${userGroup}, thymeleafService=${thymeleafService})}"></th:block>
             </li>
         </ul>
     </div>
@@ -18,7 +18,7 @@
         <h2 th:text="#{mail.watchlist.body.header.downloading}"></h2>
         <ul>
             <li th:each="downloadingMedia : ${downloadingMedias}">
-                <th:block th:replace="~{fragment/mail::media(media=${downloadingMedia}, service=${service}, userGroup=${userGroup}, overseerrEndpoint=${overseerrEndpoint})}"></th:block>
+                <th:block th:replace="~{fragment/mail::media(media=${downloadingMedia}, service=${service}, userGroup=${userGroup}, thymeleafService=${thymeleafService})}"></th:block>
             </li>
         </ul>
     </div>
@@ -26,7 +26,7 @@
         <h2 th:text="#{mail.watchlist.body.header.pending}"></h2>
         <ul>
             <li th:each="notYetAvailableMedia : ${notYetAvailableMedias}">
-                <th:block th:replace="~{fragment/mail::media(media=${notYetAvailableMedia}, service=${service}, userGroup=${userGroup}, overseerrEndpoint=${overseerrEndpoint})}"></th:block>
+                <th:block th:replace="~{fragment/mail::media(media=${notYetAvailableMedia}, service=${service}, userGroup=${userGroup}, thymeleafService=${thymeleafService})}"></th:block>
             </li>
         </ul>
     </div>
